<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Wakup</string>
    <string name="error_message_title">Error</string>
    <string name="error_message_button">Aceptar</string>
    <string name="back_button_once">Pulse de nuevo \'volver\' para salir</string>

    <!-- Connection error -->
    <string name="connection_error_message">Se produjo un error de comunicación. Compruebe su conexión a internet e inténtelo de nuevo</string>

    <!-- Loading dialogs -->
    <string name="loading_default">Cargando…</string>

    <!-- Offers Activity -->
    <string name="big_offer">ofertón</string>
    <string name="my_offers">mis ofertas</string>
    <string name="offers_map">ver mapa</string>
    <string name="no_results">No se han encontrado resultados</string>
    <string name="no_saved_offers">Guarda en tus favoritos aquellas ofertas que quieras tener siempre a mano.</string>
    <string name="no_search_results">La búsqueda no ha obtenido ninguna oferta. Comprueba los criterios de búsqueda y vuelve a intentarlo</string>

    <!-- Menu -->
    <string name="menu_map">Ver en mapa</string>
    <string name="menu_my_offers_add">Añadir a mis ofertas</string>
    <string name="menu_my_offers_remove">Eliminar de mis ofertas</string>
    <string name="menu_share">Compartir</string>

    <!-- Offer Detail Activity -->
    <string name="menu_search">Buscar</string>

    <!-- Offer Detail Activity -->
    <string name="action_offer_website">Abrir</string>
    <string name="action_offer_map">Ver mapa</string>
    <string name="action_offer_share">Compartir</string>
    <string name="action_offer_save">Guardar</string>
    <string name="action_offer_saved">Guardado</string>
    <string name="related_offers">Ofertas relacionadas:</string>
    <string name="share_offer_title">Compartir oferta</string>
    <string name="share_offer_error">Ocurrió un error al tratar de compartir la oferta</string>
    <string name="share_offer_subject" formatted="false">Wakup - %s: %s</string>
    <string name="store_offers">ofertas en este comercio</string>

    <!-- Store Offers Activity -->
    <string name="store_offers_title">Ofertas de %s</string>

    <!-- Expiration -->
    <string name="offer_expired">caducado</string>
    <string name="offer_expires_undefined">-</string>
    <string name="offer_expires_today">hoy</string>
    <string name="offer_expires_tomorrow">mañana</string>
    <string name="offer_expires_in_x_days">en %d días</string>
    <string name="offer_expires_in_1_month">en 1 mes</string>
    <string name="offer_expires_in_x_months">en %d meses</string>
    <string name="offer_expiration_date_format">dd/MM/yyyy</string>

    <!-- Distance -->
    <string name="offer_online">online</string>
    <string name="offer_distance_undefined">-</string>
    <string name="offer_distance_x_meters">a %d m</string>
    <string name="offer_distance_x_km">a %.1f km</string>

    <!-- Categories -->
    <string name="category_unknown">Otros</string>
    <string name="category_leisure">Ocio</string>
    <string name="category_restaurants">Comida</string>
    <string name="category_services">Servicios</string>
    <string name="category_shopping">Tiendas</string>

    <!-- Search -->
    <string name="search_error">Ocurrió un error al procesar la solicitud</string>
    <string name="near_me">Cerca de mí</string>
    <string name="search_brands">Marcas</string>
    <string name="search_recent">Últimas búsquedas</string>
    <string name="search_locations">Ubicaciones</string>

</resources>
