<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <com.yellowpineapple.wakup.views.OfferActionButton_
            android:id="@+id/btnRestaurants"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            app:buttonText="@string/category_restaurants"
            app:buttonIcon="@drawable/ic_btn_restaurants"
            app:buttonFontSize="@dimen/small_text"/>

        <com.yellowpineapple.wakup.views.OfferActionButton_
            android:id="@+id/btnShopping"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            app:buttonText="@string/category_shopping"
            app:buttonIcon="@drawable/ic_btn_shopping"
            app:buttonFontSize="@dimen/small_text"/>

        <com.yellowpineapple.wakup.views.OfferActionButton_
            android:id="@+id/btnLeisure"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            app:buttonText="@string/category_leisure"
            app:buttonIcon="@drawable/ic_btn_leisure"
            app:buttonFontSize="@dimen/small_text"/>

        <com.yellowpineapple.wakup.views.OfferActionButton_
            android:id="@+id/btnServices"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            app:buttonText="@string/category_services"
            app:buttonIcon="@drawable/ic_btn_services"
            app:buttonFontSize="@dimen/small_text"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/search_header_bg"/>

</LinearLayout>