<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <com.yellowpineapple.wakup.sdk.views.RemoteImageView
            android:id="@+id/imgCompany"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"/>

        <RelativeLayout
            android:id="@+id/storeView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@id/imgCompany"
            android:layout_centerVertical="true"
            android:paddingLeft="10dp"
            android:background="@drawable/clickable_view"
            android:clickable="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/imgDisclosureAddress"
                android:layout_alignParentLeft="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtCompany"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    style="@style/WakupTheme.Text.Title"
                    android:text="Company"/>

                <TextView
                    android:id="@+id/txtAddress"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:text="Company"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.yellowpineapple.wakup.sdk.views.ColorImageView
                        android:id="@+id/imgDistance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        app:imageColor="@color/light_text"
                        android:src="@drawable/ic_location"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_toRightOf="@id/imgDistance"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="5dp"
                        android:text="New Text"
                        android:textColor="@color/light_text"
                        android:textSize="@dimen/small_text"
                        style="@style/WakupTheme.Text.Italic"
                        android:id="@+id/txtDistance" />

                </RelativeLayout>

            </LinearLayout>

            <com.yellowpineapple.wakup.sdk.views.ColorImageView
                android:id="@+id/imgDisclosureAddress"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:imageColor="@color/light_text"
                android:src="@drawable/ic_disclosure"/>

        </RelativeLayout>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/background"/>


    <LinearLayout
        android:id="@+id/storeOffersView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="5dp"
        android:background="@drawable/store_offers_bg">

        <TextView
            android:id="@+id/txtStoreOffers"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:padding="0dp"
            android:gravity="center"
            android:background="@drawable/store_offers_circle"
            android:textColor="@color/store_offers_bg"
            android:textSize="@dimen/title_text"
            style="@style/WakupTheme.Text.Bold"
            android:text="22"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/store_offers"
            style="@style/WakupTheme.Text.Bold"
            android:textColor="@color/store_offers"/>

    </LinearLayout>

    <com.yellowpineapple.wakup.sdk.views.RemoteImageView
        android:id="@+id/imgOffer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/txtShortOffer"
            android:layout_centerVertical="true">

            <TextView
                android:id="@+id/txtShortDescription"
                android:text="New Text"
                android:textSize="@dimen/medium_text"
                style="@style/WakupTheme.Text.Bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <com.yellowpineapple.wakup.sdk.views.ColorImageView
                    android:id="@+id/imgExpiration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    app:imageColor="@color/light_text"
                    android:src="@drawable/ic_expiration"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_toRightOf="@id/imgExpiration"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"
                    android:text="New Text"
                    android:textSize="@dimen/small_text"
                    android:textColor="@color/light_text"
                    style="@style/WakupTheme.Text.Italic"
                    android:id="@+id/txtExpiration" />

            </RelativeLayout>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            style="@style/WakupTheme.Text.OfferShortDesc"
            android:id="@+id/txtShortOffer" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/viewDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:background="@drawable/clickable_view">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentTop="true"
            android:background="@color/background"/>

        <TextView
            android:id="@+id/txtDescription"
            android:text="New Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/imgDisclosureDescription"
            android:maxLines="3"
            android:ellipsize="end"
            android:padding="10dp"/>

        <com.yellowpineapple.wakup.sdk.views.ColorImageView
            android:id="@+id/imgDisclosureDescription"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:imageColor="@color/light_text"
            android:src="@drawable/ic_disclosure"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/background"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <com.yellowpineapple.wakup.sdk.views.OfferActionButton
            android:id="@+id/btnWebsite"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:visibility="gone"
            android:layout_margin="5dp"
            app:buttonText="@string/action_offer_website"
            app:buttonIcon="@drawable/ic_btn_website"/>

        <com.yellowpineapple.wakup.sdk.views.OfferActionButton
            android:id="@+id/btnMap"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            app:buttonText="@string/action_offer_map"
            app:buttonIcon="@drawable/ic_btn_location"/>

        <com.yellowpineapple.wakup.sdk.views.OfferActionButton
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            app:buttonText="@string/action_offer_save"
            app:buttonIcon="@drawable/ic_btn_save"/>

        <com.yellowpineapple.wakup.sdk.views.OfferActionButton
            android:id="@+id/btnShare"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            app:buttonText="@string/action_offer_share"
            app:buttonIcon="@drawable/ic_btn_share"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#8C8C8C"/>

</LinearLayout>